--- a/UntitledFinanceTracker/Views/Dashboard.xaml
+++ b/UntitledFinanceTracker/Views/Dashboard.xaml
@@ -7,7 +7,7 @@
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             Initialized="UserControl_Initialized">
+             Initialized="UserControl_Initialized" SizeChanged="UserControl_SizeChanged">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -79,22 +79,31 @@
 
         <!-- expenses pie chart -->
         <DockPanel Grid.Row="1" Grid.Column="2" Margin="5 10 10 5" Background="#212121">
-            <Label DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Top">Expenses</Label>
-            <lvc:PieChart x:Name="chrtExpenses" InnerRadius="50" LegendLocation="Right"
-                          Margin="20 0 20 20" Foreground="White">
-                <lvc:PieChart.Resources>    
+            <Label DockPanel.Dock="Top" HorizontalAlignment="Center"  VerticalAlignment="Top">Expenses</Label>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="0.6*" />
+                </Grid.ColumnDefinitions>
+                <Grid.Resources>
                     <Style TargetType="{x:Type lvc:PieSeries}">
                         <Setter Property="Stroke" Value="#212121" />
                         <Setter Property="StrokeThickness" Value="3" />
                         <Setter Property="Foreground" Value="White" />
-                        <Setter Property="FontSize" Value="12" />
+                        <Setter Property="FontSize" Value="11" />
                         <Setter Property="FontFamily" Value="Arial Black" />
                     </Style>
                     <Style TargetType="{x:Type lvc:DefaultTooltip}">
                         <Setter Property="Background" Value="#99121212" />
                     </Style>
-                </lvc:PieChart.Resources>
-            </lvc:PieChart>
+                    <Style TargetType="{x:Type lvc:PieChart}">
+                        <Setter Property="Foreground" Value="White" />
+                        <Setter Property="Margin" Value="10 0 10 10" />
+                    </Style>
+                </Grid.Resources>
+                <lvc:PieChart x:Name="chrtExpenses" DataClick="chrtExpenses_DataClick" />
+                <lvc:PieChart x:Name="chrtSubExpenses" Grid.Column="1" />
+            </Grid>
         </DockPanel>
 
         <UniformGrid Grid.Column="1" Grid.Row="2" Columns="2" Rows="2"
@@ -109,7 +118,6 @@
                     <Setter Property="HorizontalAlignment" Value="Center" />
                 </Style>
                 <Style TargetType="{x:Type Label}">
-                    <Setter Property="Margin" Value="0 5 0 0" />
                     <Setter Property="FontSize" Value="14" />
                     <Setter Property="Foreground" Value="White" />
                     <Setter Property="VerticalAlignment" Value="Top" />
