--- a/UntitledFinanceTracker/Views/Dashboard.xaml
+++ b/UntitledFinanceTracker/Views/Dashboard.xaml
@@ -14,21 +14,12 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        
-        <!-- date picker row -->
-        <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2" Margin="5 10 0 0">
-            <Label Margin="5 0 5 0" Content="From" FontSize="11" />
-            <DatePicker x:Name="dtFrom" Width="105" SelectedDateChanged="dtFrom_SelectedDateChanged" />
-            <Label Margin="5 0 5 0" Content="To" FontSize="11"  />
-            <DatePicker x:Name="dtTo" Width="105" SelectedDateChanged="dtTo_SelectedDateChanged" />
-        </StackPanel>
-        
+
         <!-- balance over time chart -->
-        <DockPanel Grid.Row="1" Grid.Column="0" LastChildFill="True" Margin="10 10 5 5" Background="#212121">
+        <DockPanel Grid.Row="0" Grid.Column="0" LastChildFill="True" Margin="10 10 5 5" Background="#212121">
             <Label DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Top">Balance Over Time</Label>
             <lvc:CartesianChart x:Name="chrtBalance" DisableAnimations="True" DataTooltip="{x:Null}"
                                 Margin="0 -10 20 20" Padding="10">
@@ -50,7 +41,7 @@
         </DockPanel>
 
         <!-- income/expense chart -->
-        <DockPanel Grid.Row="2" Margin="10 5 5 10" Background="#212121">
+        <DockPanel Grid.Row="1" Margin="10 5 5 10" Background="#212121">
             <Label DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Top">Incomes/Expenses over Time</Label>
             <lvc:CartesianChart x:Name="chrtIncExp" DisableAnimations="True"
                                 Margin="0 -10 20 20" Padding="10">
@@ -78,7 +69,7 @@
         </DockPanel>
 
         <!-- expenses pie chart -->
-        <DockPanel Grid.Row="1" Grid.Column="2" Margin="5 10 10 5" Background="#212121">
+        <DockPanel Grid.Row="0" Grid.Column="1" Margin="5 10 10 5" Background="#212121">
             <Label DockPanel.Dock="Top" HorizontalAlignment="Center"  VerticalAlignment="Top">Expenses</Label>
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -106,14 +97,15 @@
             </Grid>
         </DockPanel>
 
-        <UniformGrid Grid.Column="1" Grid.Row="2" Columns="2" Rows="2"
-                     Margin="0 0 5 5">
+        <!-- summary values -->
+        <UniformGrid Grid.Column="1" Grid.Row="1" Columns="2" Rows="2" Margin="0 0 5 5">
             <UniformGrid.Resources>
                 <Style TargetType="{x:Type TextBlock}">
-                    <Setter Property="Foreground" Value="White" />
+                    <Setter Property="FontSize" Value="20" />
+                    <Setter Property="Margin" Value="0 15 0 0" />
                     <Setter Property="FontWeight" Value="Bold" />
                     <Setter Property="FontFamily" Value="Arial" />
-                    <Setter Property="FontSize" Value="20" />
+                    <Setter Property="Foreground" Value="White" />
                     <Setter Property="VerticalAlignment" Value="Center" />
                     <Setter Property="HorizontalAlignment" Value="Center" />
                 </Style>
