--- a/UntitledFinanceTracker/Views/MainWindow.xaml
+++ b/UntitledFinanceTracker/Views/MainWindow.xaml
@@ -67,14 +67,6 @@
                     </StackPanel>
                 </ListViewItem>
 
-                <!-- balance sheet tab -->
-                <ListViewItem Style="{StaticResource Navbar}" x:Name="lviBalanceSheet" TabIndex="3">
-                    <StackPanel Orientation="Horizontal">
-                        <fa:ImageAwesome Icon="BalanceScale"/>
-                        <TextBlock Text="Balance Sheet"/>
-                    </StackPanel>
-                </ListViewItem>
-
                 <!-- statistics tab -->
                 <ListViewItem Style="{StaticResource Navbar}" x:Name="lviStats" TabIndex="4">
                     <StackPanel Orientation="Horizontal">
@@ -130,6 +122,18 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
+        </StackPanel>
+        
+        <!-- date picker row -->
+        <StackPanel VerticalAlignment="Bottom" Grid.RowSpan="2" Margin="0 0 0 10">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 0 10 0">
+                <Label Margin="5 0 5 0" Content="From" FontSize="11" />
+                <DatePicker x:Name="dtFrom" Width="105" SelectedDateChanged="dtFrom_SelectedDateChanged" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 5 10 0">
+                <Label Margin="5 0 5 0" Content="To" FontSize="11"  />
+                <DatePicker x:Name="dtTo" Width="105" SelectedDateChanged="dtTo_SelectedDateChanged" />
+            </StackPanel>
         </StackPanel>
 
         <!-- Grid column[1] with empty grid (parent for user controls) -->
