--- a/UntitledFinanceTracker/Views/EditTransaction.xaml
+++ b/UntitledFinanceTracker/Views/EditTransaction.xaml
@@ -11,7 +11,7 @@
         Height="300" Width="420"
         ResizeMode="NoResize"
         WindowStyle="SingleBorderWindow"
-        WindowStartupLocation="CenterScreen"
+        WindowStartupLocation="CenterOwner"
         Initialized="Window_Initialized">
     <Grid>
         <Grid.ColumnDefinitions>
